src/mta/visualizer/formal/antlr/FormalVisualParser.java
// Generated from /home/jaehun/git/mta.maude-tls-attacker/src/mta.visualizer/formal/antlr/FormalVisual.g4 by ANTLR 4.13.2
package mta.visualizer.formal.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FormalVisualParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEND=1, EXTENSION=2, CERTIFICATE=3, CONTENTTYPE=4, VERSION=5, RECORDLEN=6, 
		HANDSHAKETYPE=7, HANDSHAKELEN=8, PROTOCOL=9, CIPHERSUITES=10, CIPHERSUITESLEN=11, 
		RANDOM=12, SESSIONID=13, SESSIONIDLEN=14, COMPRESSION=15, COMPRESSIONLEN=16, 
		SUPPORTED_VERSIONS=17, SUPPORTED_VERSIONS_LEN=18, SIGNATURE_ALGORITHMS=19, 
		SIGNATURE_ALGORITHMS_LEN=20, KEY_SHARES=21, KEY_SHARES_LEN=22, SUPPORTED_GROUPS=23, 
		SUPPORTED_GROUPS_LEN=24, EXTENSIONLEN=25, CERTIFICATELEN=26, SIGNATURE=27, 
		SIGNATURE_LEN=28, CERTIFICATE_VERIFY_ALGORITHM=29, VERIFYDATA=30, ALERTDESC=31, 
		ALERTLEV=32, SERVERECDHPARAM=33, CERTIFICATETYPE=34, CERTIFICATETYPELEN=35, 
		CERTIFICATEALGO=36, CERTIFICATEALGOLEN=37, CERTIFICATEAUTH=38, CERTIFICATEAUTHLEN=39, 
		CLIENTECDHPARAM=40, CHANGECIPHERSPEC=41, CERTIFICATEREQUESTCONTEXT=42, 
		CERTIFICATEREQUESTCONTEXTLEN=43, LPAREN=44, RPAREN=45, LBRACE=46, RBRACE=47, 
		COMMA=48, DOT=49, STRING=50, INT=51, PLACEHOLDER=52, IDENT=53, WS=54;
	public static final int
		RULE_file = 0, RULE_sendStmt = 1, RULE_actor = 2, RULE_content = 3, RULE_pair = 4, 
		RULE_internalPair = 5, RULE_leafPair = 6, RULE_leafKey = 7, RULE_anyText = 8, 
		RULE_atomToken = 9, RULE_parenGroup = 10, RULE_braceGroup = 11, RULE_refExpr = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "sendStmt", "actor", "content", "pair", "internalPair", "leafPair", 
			"leafKey", "anyText", "atomToken", "parenGroup", "braceGroup", "refExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'send'", "'extension'", "'certificate'", "'contentType'", "'version'", 
			"'recordLen'", "'handshakeType'", "'handshakeLen'", "'mta.protocol'", "'cipherSuites'",
			"'cipherSuitesLen'", "'random'", "'sessionID'", "'sessionIDLen'", "'compression'", 
			"'compressionLen'", "'supported-versions'", "'supported-versions-len'", 
			"'signature-algorithms'", "'signature-algorithms-len'", "'key-shares'", 
			"'key-shares-len'", "'supported-groups'", "'supported-groups-len'", "'extensionLen'", 
			"'certificateLen'", "'signature'", "'signature-len'", "'certificate-verify-algorithm'", 
			"'verifyData'", "'alertDesc'", "'alertLev'", "'serverECDHParam'", "'certificateType'", 
			"'certificateTypeLen'", "'certificateAlgo'", "'certificateAlgoLen'", 
			"'certificateAuth'", "'certificateAuthLen'", "'clientECDHParam'", "'changeCipherSpec'", 
			"'certificate-request-context'", "'certificate-request-context-len'", 
			"'('", "')'", "'{'", "'}'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEND", "EXTENSION", "CERTIFICATE", "CONTENTTYPE", "VERSION", "RECORDLEN", 
			"HANDSHAKETYPE", "HANDSHAKELEN", "PROTOCOL", "CIPHERSUITES", "CIPHERSUITESLEN", 
			"RANDOM", "SESSIONID", "SESSIONIDLEN", "COMPRESSION", "COMPRESSIONLEN", 
			"SUPPORTED_VERSIONS", "SUPPORTED_VERSIONS_LEN", "SIGNATURE_ALGORITHMS", 
			"SIGNATURE_ALGORITHMS_LEN", "KEY_SHARES", "KEY_SHARES_LEN", "SUPPORTED_GROUPS", 
			"SUPPORTED_GROUPS_LEN", "EXTENSIONLEN", "CERTIFICATELEN", "SIGNATURE", 
			"SIGNATURE_LEN", "CERTIFICATE_VERIFY_ALGORITHM", "VERIFYDATA", "ALERTDESC", 
			"ALERTLEV", "SERVERECDHPARAM", "CERTIFICATETYPE", "CERTIFICATETYPELEN", 
			"CERTIFICATEALGO", "CERTIFICATEALGOLEN", "CERTIFICATEAUTH", "CERTIFICATEAUTHLEN", 
			"CLIENTECDHPARAM", "CHANGECIPHERSPEC", "CERTIFICATEREQUESTCONTEXT", "CERTIFICATEREQUESTCONTEXTLEN", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "DOT", "STRING", "INT", 
			"PLACEHOLDER", "IDENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FormalVisual.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormalVisualParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FormalVisualParser.EOF, 0); }
		public List<SendStmtContext> sendStmt() {
			return getRuleContexts(SendStmtContext.class);
		}
		public SendStmtContext sendStmt(int i) {
			return getRuleContext(SendStmtContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				sendStmt();
				}
				}
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SEND );
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SendStmtContext extends ParserRuleContext {
		public TerminalNode SEND() { return getToken(FormalVisualParser.SEND, 0); }
		public TerminalNode LPAREN() { return getToken(FormalVisualParser.LPAREN, 0); }
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FormalVisualParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FormalVisualParser.COMMA, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FormalVisualParser.RPAREN, 0); }
		public SendStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sendStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterSendStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitSendStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitSendStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SendStmtContext sendStmt() throws RecognitionException {
		SendStmtContext _localctx = new SendStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sendStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(SEND);
			setState(34);
			match(LPAREN);
			setState(35);
			actor();
			setState(36);
			match(COMMA);
			setState(37);
			actor();
			setState(38);
			match(COMMA);
			setState(39);
			content();
			setState(40);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActorContext extends ParserRuleContext {
		public RefExprContext refExpr() {
			return getRuleContext(RefExprContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(FormalVisualParser.IDENT, 0); }
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitActor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitActor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_actor);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				refExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(IDENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				pair();
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17592186044412L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public InternalPairContext internalPair() {
			return getRuleContext(InternalPairContext.class,0);
		}
		public LeafPairContext leafPair() {
			return getRuleContext(LeafPairContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pair);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXTENSION:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				internalPair();
				}
				break;
			case CERTIFICATE:
			case CONTENTTYPE:
			case VERSION:
			case RECORDLEN:
			case HANDSHAKETYPE:
			case HANDSHAKELEN:
			case PROTOCOL:
			case CIPHERSUITES:
			case CIPHERSUITESLEN:
			case RANDOM:
			case SESSIONID:
			case SESSIONIDLEN:
			case COMPRESSION:
			case COMPRESSIONLEN:
			case SUPPORTED_VERSIONS:
			case SUPPORTED_VERSIONS_LEN:
			case SIGNATURE_ALGORITHMS:
			case SIGNATURE_ALGORITHMS_LEN:
			case KEY_SHARES:
			case KEY_SHARES_LEN:
			case SUPPORTED_GROUPS:
			case SUPPORTED_GROUPS_LEN:
			case EXTENSIONLEN:
			case CERTIFICATELEN:
			case SIGNATURE:
			case SIGNATURE_LEN:
			case CERTIFICATE_VERIFY_ALGORITHM:
			case VERIFYDATA:
			case ALERTDESC:
			case ALERTLEV:
			case SERVERECDHPARAM:
			case CERTIFICATETYPE:
			case CERTIFICATETYPELEN:
			case CERTIFICATEALGO:
			case CERTIFICATEALGOLEN:
			case CERTIFICATEAUTH:
			case CERTIFICATEAUTHLEN:
			case CLIENTECDHPARAM:
			case CHANGECIPHERSPEC:
			case CERTIFICATEREQUESTCONTEXT:
			case CERTIFICATEREQUESTCONTEXTLEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				leafPair();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InternalPairContext extends ParserRuleContext {
		public TerminalNode EXTENSION() { return getToken(FormalVisualParser.EXTENSION, 0); }
		public TerminalNode LPAREN() { return getToken(FormalVisualParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(FormalVisualParser.RPAREN, 0); }
		public AnyTextContext anyText() {
			return getRuleContext(AnyTextContext.class,0);
		}
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public InternalPairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_internalPair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterInternalPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitInternalPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitInternalPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InternalPairContext internalPair() throws RecognitionException {
		InternalPairContext _localctx = new InternalPairContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_internalPair);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(EXTENSION);
			setState(56);
			match(LPAREN);
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					pair();
					}
					}
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17592186044412L) != 0) );
				}
				break;
			case 2:
				{
				setState(62);
				anyText();
				}
				break;
			}
			setState(65);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeafPairContext extends ParserRuleContext {
		public LeafKeyContext leafKey() {
			return getRuleContext(LeafKeyContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(FormalVisualParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(FormalVisualParser.RPAREN, 0); }
		public AnyTextContext anyText() {
			return getRuleContext(AnyTextContext.class,0);
		}
		public LeafPairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leafPair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).enterLeafPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalVisualListener ) ((FormalVisualListener)listener).exitLeafPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormalVisualVisitor ) return ((FormalVisualVisitor<? extends T>)visitor).visitLeafPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LeafPairContext leafPair() throws RecognitionException {
		LeafPairContext _localctx = new LeafPairContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_leafPair);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			leafKey();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(68);
				match(LPAREN);
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(69);
					anyText();
					}
					break;
				}
				setState(72);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
